	* changed: moved many custom functions out of /includes/functions/custom.php and into task-specific function files.
	* changed: renamed plugins to extensions
	* changed: [date] shortcode now accepts "relative=true" parameter to return a relative date (e.g. 5 hours ago)
	* changed: updated SB Social widget to include Google+ and more gracefully handle output of each network's name
	* fixed: minor (but annoying) bug introduced in 2.5.4 that prevented sidebar settings from being stored on first save.
	* added: /includes/functions/conditionals.php
	* added: /includes/functions/images.php	
	* added: /includes/functions/menus.php	
	* removed: all custom hook functions, replacing them more simply with do_action( 'hook_name' )
	* removed: page-fullwidth.php (full-width page template) -- use the One Column layout option instead
	* removed: page-tertiarysidebar.php (tertiary sidebar page template ) -- use sidebar manager instead
	* removed: sidebar-tertiary.php (tertiary sidebar) -- use sidebar manager instead
	* removed: built-in Slideshows functionality and dependencies (/includes/scripts/nivo-slider/)

2012.01.31 - version 2.5.6
	* changed: updated [date] shortcode so that you can pass a custom PHP date format (e.g. [date format="Y"])
	* changed: hooked #header_wrap correctly to sb_before_header 999 and sb_after_header 9 (instead of the other way around)

2012.01.23 - version 2.5.5
	* added: Complete security audit by Mark Jaquith, lots of minor changes to tighten theme security
	* added: Options API now supports new contextual Help tab in WP3.3, added help text for relevant panels
	* changed: updated how admin menu items were registered per WP 3.3 changes
	* changed: updated when all defaults scripts and styles were registered to better follow WP standards
	* changed: updated footer settings to load the current year as the default setting
	* changed: slideshows now use sb_post_image_url() instead of sb_post_image()
	* changed: updated Nivo Slider from 2.3 to 2.7.1